<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lastThrow"
        android:src="@drawable/dice1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastThrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/btnLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:id="@+id/btnEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        app:layout_constraintStart_toEndOf="@id/btnLower"
        app:layout_constraintEnd_toStartOf="@id/btnhigher"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:id="@+id/btnhigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/higher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>